--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
