--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
